<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="0"
        android:gravity="center"
        android:text="@string/user_registration"
        android:textSize="24sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="100dp"
            android:layout_marginRight="100dp"
            android:layout_weight="0"
            android:text="@string/NameTxt"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/fNameEdtTxt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:hint="First Name"
            android:inputType="textPersonName"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="103dp"
            android:layout_marginRight="103dp"
            android:layout_weight="0"
            android:text="@string/LastNameTxt"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/lNameEdtTxt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:hint="Last Name"
            android:inputType="textPersonName"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/emailTxt"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="100dp"
            android:layout_marginRight="100dp"
            android:layout_weight="0"
            android:text="@string/EmailTxt"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/emailEdtTxt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:ems="10"
            android:hint="name@example.com"
            android:inputType="textEmailAddress"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/passTxt"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="100dp"
            android:layout_marginRight="100dp"
            android:layout_weight="0"
            android:text="Password"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/passEdtTxt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:ems="10"
            android:hint="Password"
            android:inputType="textPassword"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/conPassTxt"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp"
            android:layout_weight="0"
            android:text="Confirm Password"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/conPassEdtTxt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:ems="10"
            android:hint="Confirm Password"
            android:inputType="textPassword"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="100dp"
            android:layout_marginRight="100dp"
            android:layout_weight="0"
            android:text="Phone"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/phoneEdtTxt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:ems="10"
            android:hint="0591231234"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="100dp"
            android:layout_marginRight="100dp"
            android:layout_weight="0"
            android:text="Gender"
            android:textSize="18sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/maleRbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scrollbarSize="2dp"
                android:text="Male"
                android:textSize="12dp" />

            <RadioButton
                android:id="@+id/femaleRbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scrollbarSize="2dp"
                android:text="Female"
                android:textSize="12sp" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:layout_weight="0"
            android:text="Birth Of Date"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/BODedtTxt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:ems="10"
            android:hint="dd/mm/yyyy"
            android:inputType="date"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="100dp"
            android:layout_marginRight="100dp"
            android:layout_weight="0"
            android:text="City"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/citiesSpinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|right"
        android:onClick="save_OnClick"
        android:text="@string/btnSave" />

</androidx.appcompat.widget.LinearLayoutCompat>